[tool.poetry]
name = "heatmap"
version = "0.1.0"
description = "Create heatmaps from a collectoin of GPX files"
authors = ["Felipe Aguirre Martinez <felipeam86@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
